now that we're on JDK7, we can use G1GC
This simplifies some of the run command by removing tuning that is no
longer needed/recommended.